Translate tutorial.fsx.

--- a/ja/rinterop.html
+++ b/ja/rinterop.html
@@ -333,7 +333,7 @@ the data, we use the <a href="https://github.com/fsharp/FSharp.Charting">F# Char
 </tr>
 </table>
 
-<p><img src="/Deedle/ja/images/chart1.png" alt="Chart" /></p>
+<p><img src="/Deedle/ja\../images/chart1.png" alt="Chart" /></p>
 
 <h3>From Deedle to R</h3>
 
