--- a/ja/index.html
+++ b/ja/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Deedle: Exploratory data library for .NET
+    <title>Deedle: .NET用の探索的データライブラリ
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Easy to use .NET library for data manipulation and scientific programming">
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1>Deedle: Exploratory data library for .NET</h1>
+<h1>Deedle: .NET用の探索的データライブラリ</h1>
 
 <img src="http://www.bluemountaincapital.com/media/logo.gif" style="float:right;margin:10px" />
 
