WIP: Translate frame.fsx.

--- a/ja/rinterop.html
+++ b/ja/rinterop.html
@@ -352,8 +352,143 @@ data frame as argument to standard R functions that expect data frame.</p>
 </tr>
 </table>
 
-<pre><code>Value 'air' could not be evaluated
-</code></pre>
+<div class="deedleframe">
+
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th><p>Ozone</p></th>
+<th><p>Solar.R</p></th>
+<th><p>Wind</p></th>
+<th><p>Temp</p></th>
+<th><p>Month</p></th>
+<th><p>Day</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>0</p></td>
+<td><p>N/A</p></td>
+<td><p>190</p></td>
+<td><p>7.4</p></td>
+<td><p>67</p></td>
+<td><p>5</p></td>
+<td><p>1</p></td>
+</tr>
+<tr class="even">
+<td><p>1</p></td>
+<td><p>36</p></td>
+<td><p>118</p></td>
+<td><p>8</p></td>
+<td><p>72</p></td>
+<td><p>5</p></td>
+<td><p>2</p></td>
+</tr>
+<tr class="odd">
+<td><p>2</p></td>
+<td><p>12</p></td>
+<td><p>149</p></td>
+<td><p>12.6</p></td>
+<td><p>74</p></td>
+<td><p>5</p></td>
+<td><p>3</p></td>
+</tr>
+<tr class="even">
+<td><p>3</p></td>
+<td><p>18</p></td>
+<td><p>313</p></td>
+<td><p>11.5</p></td>
+<td><p>62</p></td>
+<td><p>5</p></td>
+<td><p>4</p></td>
+</tr>
+<tr class="odd">
+<td><p>4</p></td>
+<td><p>N/A</p></td>
+<td><p>N/A</p></td>
+<td><p>14.3</p></td>
+<td><p>56</p></td>
+<td><p>5</p></td>
+<td><p>5</p></td>
+</tr>
+<tr class="even">
+<td><p>5</p></td>
+<td><p>28</p></td>
+<td><p>N/A</p></td>
+<td><p>14.9</p></td>
+<td><p>66</p></td>
+<td><p>5</p></td>
+<td><p>6</p></td>
+</tr>
+<tr class="odd">
+<td><p>6</p></td>
+<td><p>23</p></td>
+<td><p>299</p></td>
+<td><p>8.6</p></td>
+<td><p>65</p></td>
+<td><p>5</p></td>
+<td><p>7</p></td>
+</tr>
+<tr class="even">
+<td><p>7</p></td>
+<td><p>19</p></td>
+<td><p>99</p></td>
+<td><p>13.8</p></td>
+<td><p>59</p></td>
+<td><p>5</p></td>
+<td><p>8</p></td>
+</tr>
+<tr class="odd">
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+</tr>
+<tr class="even">
+<td><p>149</p></td>
+<td><p>N/A</p></td>
+<td><p>145</p></td>
+<td><p>13.2</p></td>
+<td><p>77</p></td>
+<td><p>9</p></td>
+<td><p>27</p></td>
+</tr>
+<tr class="odd">
+<td><p>150</p></td>
+<td><p>14</p></td>
+<td><p>191</p></td>
+<td><p>14.3</p></td>
+<td><p>75</p></td>
+<td><p>9</p></td>
+<td><p>28</p></td>
+</tr>
+<tr class="even">
+<td><p>151</p></td>
+<td><p>18</p></td>
+<td><p>131</p></td>
+<td><p>8</p></td>
+<td><p>76</p></td>
+<td><p>9</p></td>
+<td><p>29</p></td>
+</tr>
+<tr class="odd">
+<td><p>152</p></td>
+<td><p>20</p></td>
+<td><p>223</p></td>
+<td><p>11.5</p></td>
+<td><p>68</p></td>
+<td><p>9</p></td>
+<td><p>30</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <p>Let's first try passing the <code>air</code> frame to the R <code>as.data.frame</code> function (which 
 will not do anything, aside from importing the data into R). To do something 
@@ -654,8 +789,7 @@ and then draws a chart showing the results:</p>
 
 <p>Depending on your random number generator, the resulting chart looks something like this:</p>
 
-<pre><code>Value 'means' could not be evaluated
-</code></pre>
+<p><img src="/Deedle/ja\../images/chart2.png" alt="Chart" /></p>
 
 <div class="tip" id="fs1">namespace RProvider</div>
 <div class="tip" id="fs2">namespace RDotNet</div>
