--- a/ja/stats.html
+++ b/ja/stats.html
@@ -67,8 +67,41 @@ snippet loads <code>AirQuality.csv</code> and shows the values in the <code>Ozon
 </tr>
 </table>
 
-<pre><code>Value 'ozone' could not be evaluated
-</code></pre>
+<div class="deedleseries">
+
+<table>
+<thead>
+<tr class="header">
+<th><p>Keys</p></th>
+<th><p>0</p></th>
+<th><p>1</p></th>
+<th><p>2</p></th>
+<th><p>3</p></th>
+<th><p>4</p></th>
+<th><p> ... </p></th>
+<th><p>150</p></th>
+<th><p>151</p></th>
+<th><p>152</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>Values</p></td>
+<td><p>N/A</p></td>
+<td><p>36</p></td>
+<td><p>12</p></td>
+<td><p>18</p></td>
+<td><p>N/A</p></td>
+<td><p> ... </p></td>
+<td><p>14</p></td>
+<td><p>18</p></td>
+<td><p>20</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <h3>Series statistics</h3>
 
@@ -94,8 +127,31 @@ stores mean extremes and median of the input series:</p>
 </tr>
 </table>
 
-<pre><code>Value 'ozinfo' could not be evaluated
-</code></pre>
+<div class="deedleseries">
+
+<table>
+<thead>
+<tr class="header">
+<th><p>Keys</p></th>
+<th><p>Mean</p></th>
+<th><p>Max</p></th>
+<th><p>Min</p></th>
+<th><p>Median</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>Values</p></td>
+<td><p>42</p></td>
+<td><p>168</p></td>
+<td><p>1</p></td>
+<td><p>31</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <p>To make the output simpler, we round the value of the mean (although the result is
 a floating point number). Note that the value is calculated from the <em>available</em> values
@@ -131,8 +187,52 @@ the <code>air</code> data set and build a frame that shows the values (series) i
 </tr>
 </table>
 
-<pre><code>Value 'round(info*100.0)/100.0' could not be evaluated
-</code></pre>
+<div class="deedleframe">
+
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th><p>Mean</p></th>
+<th><p>+/-</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>Ozone</p></td>
+<td><p>42.14</p></td>
+<td><p>33.13</p></td>
+</tr>
+<tr class="even">
+<td><p>Solar.R</p></td>
+<td><p>185.93</p></td>
+<td><p>90.06</p></td>
+</tr>
+<tr class="odd">
+<td><p>Wind</p></td>
+<td><p>9.96</p></td>
+<td><p>3.52</p></td>
+</tr>
+<tr class="even">
+<td><p>Temp</p></td>
+<td><p>77.88</p></td>
+<td><p>9.47</p></td>
+</tr>
+<tr class="odd">
+<td><p>Month</p></td>
+<td><p>6.99</p></td>
+<td><p>1.42</p></td>
+</tr>
+<tr class="even">
+<td><p>Day</p></td>
+<td><p>15.8</p></td>
+<td><p>8.86</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <p>Missing values are handled in the same way as when calculating statistics of a series
 and are skipped. If this is not desirable, you can use functions from the <a href="reference/deedle-seriesmodule.html">Series 
@@ -169,8 +269,41 @@ moving window of length 3:</p>
 </tr>
 </table>
 
-<pre><code>Value 'mvmozone' could not be evaluated
-</code></pre>
+<div class="deedleseries">
+
+<table>
+<thead>
+<tr class="header">
+<th><p>Keys</p></th>
+<th><p>0</p></th>
+<th><p>1</p></th>
+<th><p>2</p></th>
+<th><p>3</p></th>
+<th><p>4</p></th>
+<th><p> ... </p></th>
+<th><p>150</p></th>
+<th><p>151</p></th>
+<th><p>152</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>Values</p></td>
+<td><p>N/A</p></td>
+<td><p>N/A</p></td>
+<td><p>24</p></td>
+<td><p>22</p></td>
+<td><p>15</p></td>
+<td><p> ... </p></td>
+<td><p>22</p></td>
+<td><p>16</p></td>
+<td><p>17.3333333333333</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <p>The keys of the resulting series are the same as the keys of the input series. Statistical
 moving functions (count, sum, mean, variance, standard deviation, skewness and kurtosis)
@@ -195,8 +328,41 @@ value over a smaller window:</p>
 </tr>
 </table>
 
-<pre><code>Value 'mvxozone' could not be evaluated
-</code></pre>
+<div class="deedleseries">
+
+<table>
+<thead>
+<tr class="header">
+<th><p>Keys</p></th>
+<th><p>0</p></th>
+<th><p>1</p></th>
+<th><p>2</p></th>
+<th><p>3</p></th>
+<th><p>4</p></th>
+<th><p> ... </p></th>
+<th><p>150</p></th>
+<th><p>151</p></th>
+<th><p>152</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>Values</p></td>
+<td><p>N/A</p></td>
+<td><p>36</p></td>
+<td><p>12</p></td>
+<td><p>12</p></td>
+<td><p>12</p></td>
+<td><p> ... </p></td>
+<td><p>14</p></td>
+<td><p>14</p></td>
+<td><p>14</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <p>Here, the first value is missing, because the one-element window containing just the first value
 contains only missing values. However, the value for the key <em>1</em>, because the two-element window
@@ -243,8 +409,101 @@ Here, we align the two series using a frame, so that we can easily see the resul
 </tr>
 </table>
 
-<pre><code>Value '(round(exp*100.0))/100.0' could not be evaluated
-</code></pre>
+<div class="deedleframe">
+
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th><p>Ozone</p></th>
+<th><p>Mean</p></th>
+<th><p>+/-</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>0</p></td>
+<td><p>N/A</p></td>
+<td><p>N/A</p></td>
+<td><p>N/A</p></td>
+</tr>
+<tr class="even">
+<td><p>1</p></td>
+<td><p>36</p></td>
+<td><p>36</p></td>
+<td><p>N/A</p></td>
+</tr>
+<tr class="odd">
+<td><p>2</p></td>
+<td><p>12</p></td>
+<td><p>24</p></td>
+<td><p>16.97</p></td>
+</tr>
+<tr class="even">
+<td><p>3</p></td>
+<td><p>18</p></td>
+<td><p>22</p></td>
+<td><p>12.49</p></td>
+</tr>
+<tr class="odd">
+<td><p>4</p></td>
+<td><p>N/A</p></td>
+<td><p>22</p></td>
+<td><p>12.49</p></td>
+</tr>
+<tr class="even">
+<td><p>5</p></td>
+<td><p>28</p></td>
+<td><p>23.5</p></td>
+<td><p>10.63</p></td>
+</tr>
+<tr class="odd">
+<td><p>6</p></td>
+<td><p>23</p></td>
+<td><p>23.4</p></td>
+<td><p>9.21</p></td>
+</tr>
+<tr class="even">
+<td><p>7</p></td>
+<td><p>19</p></td>
+<td><p>22.67</p></td>
+<td><p>8.43</p></td>
+</tr>
+<tr class="odd">
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+<td><p> ... </p></td>
+</tr>
+<tr class="even">
+<td><p>149</p></td>
+<td><p>N/A</p></td>
+<td><p>42.8</p></td>
+<td><p>33.32</p></td>
+</tr>
+<tr class="odd">
+<td><p>150</p></td>
+<td><p>14</p></td>
+<td><p>42.55</p></td>
+<td><p>33.28</p></td>
+</tr>
+<tr class="even">
+<td><p>151</p></td>
+<td><p>18</p></td>
+<td><p>42.33</p></td>
+<td><p>33.21</p></td>
+</tr>
+<tr class="odd">
+<td><p>152</p></td>
+<td><p>20</p></td>
+<td><p>42.14</p></td>
+<td><p>33.13</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <p>As the example illustrates, expanding window statistics typically returns a series that starts
 with some missing values. Here, the first mean is missing (because one-element window contains
@@ -301,8 +560,33 @@ first level (individual months) using functions prefixed with <code>level</code>
 </tr>
 </table>
 
-<pre><code>Value 'lvlozone' could not be evaluated
-</code></pre>
+<div class="deedleseries">
+
+<table>
+<thead>
+<tr class="header">
+<th><p>Keys</p></th>
+<th><p>5月</p></th>
+<th><p>6月</p></th>
+<th><p>7月</p></th>
+<th><p>8月</p></th>
+<th><p>9月</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>Values</p></td>
+<td><p>22.92</p></td>
+<td><p>29.4444444444444</p></td>
+<td><p>59.1153846153846</p></td>
+<td><p>59.9615384615385</p></td>
+<td><p>31.448275862069</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <p>Currently, the <code>Stats</code> type does not include a function that would let you apply multi-level
 statistical functions on entire data frames, but this can easily be implemented using the
@@ -326,8 +610,57 @@ statistical functions on entire data frames, but this can easily be implemented 
 </tr>
 </table>
 
-<pre><code>Value 'lvlall' could not be evaluated
-</code></pre>
+<div class="deedleframe">
+
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th><p>5月</p></th>
+<th><p>6月</p></th>
+<th><p>7月</p></th>
+<th><p>8月</p></th>
+<th><p>9月</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><p>Ozone</p></td>
+<td><p>22.92</p></td>
+<td><p>29.4444444444444</p></td>
+<td><p>59.1153846153846</p></td>
+<td><p>59.9615384615385</p></td>
+<td><p>31.448275862069</p></td>
+</tr>
+<tr class="even">
+<td><p>Solar.R</p></td>
+<td><p>181.296296296296</p></td>
+<td><p>190.166666666667</p></td>
+<td><p>216.483870967742</p></td>
+<td><p>171.857142857143</p></td>
+<td><p>167.433333333333</p></td>
+</tr>
+<tr class="odd">
+<td><p>Wind</p></td>
+<td><p>11.6225806451613</p></td>
+<td><p>10.2666666666667</p></td>
+<td><p>8.94193548387097</p></td>
+<td><p>8.79354838709678</p></td>
+<td><p>10.18</p></td>
+</tr>
+<tr class="even">
+<td><p>Temp</p></td>
+<td><p>65.5483870967742</p></td>
+<td><p>79.1</p></td>
+<td><p>83.9032258064516</p></td>
+<td><p>83.9677419354839</p></td>
+<td><p>76.9</p></td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
 
 <p>If we used <code>Frame.getNumericCols</code> directly, we would also calculate the mean of "Day" and 
 "Month" columns, which does not make much sense in this example. For that reason, the snippet
