Update Japanese documents.

--- a/ja/samples/formatting.html
+++ b/ja/samples/formatting.html
@@ -407,11 +407,11 @@
             </li>
 
             <li class="nav-header">ドキュメント</li>
-            <li><a href="/Deedle/ja/reference/index.html">APIリファレンス(En)</a></li>
+            <li><a href="/Deedle/ja/../reference/index.html">APIリファレンス(En)</a></li>
             <li class="divider"></li>
-            <li><a href="/Deedle/ja/reference/deedle-seriesmodule.html">Series モジュール</a></li>
-            <li><a href="/Deedle/ja/reference/deedle-framemodule.html">Frame モジュール</a></li>
-            <li><a href="/Deedle/ja/reference/deedle-stats.html">Stats モジュール</a></li>
+            <li><a href="/Deedle/ja/../reference/deedle-seriesmodule.html">Series モジュール</a></li>
+            <li><a href="/Deedle/ja/../reference/deedle-framemodule.html">Frame モジュール</a></li>
+            <li><a href="/Deedle/ja/../reference/deedle-stats.html">Stats モジュール</a></li>
 
             <li class="nav-header">サンプル</li>
             <li><a href="/Deedle/ja/lazysource.html">遅延データ読み込み</a></li>
