Update Japanese documents.

--- a/ja/frame.html
+++ b/ja/frame.html
@@ -259,7 +259,7 @@ CSVファイルとして保存できます。
 
 <p>データ処理をもっと簡単にするために、
 地域毎の国情報を読み取って階層的インデックスを持ったデータフレームを作成しています
-(詳細については<a href="#indexing">高度なインデックシングの節</a>を参照)。
+(詳細については<a href="#indexing">高度なインデックシングのセクション</a>を参照)。
 これでOECDとユーロエリアのデータを簡単に読み取ることができるようになりました：</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
@@ -577,7 +577,7 @@ CSVファイルとして保存できます。
 
 <p>ここでは <code>string</code> 型の <code>Name</code> と、<code>int</code> 型の <code>Age</code>、<code>string list</code> 型の <code>Countries</code>
 という3つの列を持った <code>people</code> データフレームを使用します
-(これは <a href="#creating-recd">先の節で</a> F#のレコードから作成したものです)：</p>
+(これは <a href="#creating-recd">先のセクションで</a> F#のレコードから作成したものです)：</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l">1: </span>
@@ -1078,7 +1078,7 @@ CSVファイルとして保存できます。
 および下限(最も近い下方の値のうち、最も大きい値)が自動的に使用されます
 (今回の場合、1月1日に対応する値はありません)。</p>
 
-<p><a href="#indexing">後の節</a> で説明しますが、
+<p><a href="#indexing">後のセクション</a> で説明しますが、
 階層的(あるいはマルチレベル)インデックスを使用している場合には
 まだいくつかの方法があります。
 しかしまずはグループ化について説明する必要があるでしょう。</p>
@@ -1482,7 +1482,7 @@ CSVファイルとして保存できます。
 
 <h2>ピボットテーブルを使用してデータを集計する</h2>
 
-<p>先の節では非常に一般的なデータ処理操作であるグループ化を紹介しました。
+<p>先のセクションでは非常に一般的なデータ処理操作であるグループ化を紹介しました。
 しかしたとえば特定のキーでデータをグループ化しつつ、
 集計結果を出力するというように、2つの操作を同時に行いたいこともよくあります。
 この組み合わせは <strong>ピボットテーブル</strong> という概念としてまとめられています。</p>
@@ -1490,7 +1490,7 @@ CSVファイルとして保存できます。
 <p>ピボットテーブルはデータフレームの行で利用可能な2つのキーを
 元にしたフレーム内のデータを集計したい場合に便利なツールです。</p>
 
-<p>たとえば <a href="#creating-csv">以前に読み込み</a>、先の節でも扱った
+<p>たとえば <a href="#creating-csv">以前に読み込み</a>、先のセクションでも扱った
 タイタニック号のデータセットに対して、男性と女性の生存比率を比較したいとしましょう。
 これはピボットテーブルを作成する呼び出しを1回行うだけで実現できます：</p>
 
@@ -1619,11 +1619,11 @@ CSVファイルとして保存できます。
 これは階層的インデックスを使用することで処理することができます。
 また多次元データを簡単に処理する方法もあります。
 マルチレベルインデックスは最も一般的にはグループ化によって生成されます
-(先の節にいくつか例があります)。</p>
+(先のセクションにいくつか例があります)。</p>
 
 <h3>世界銀行データセットのルックアップ</h3>
 
-<p>この節では <a href="#creating-wb">先ほど使用したものと同じ、世界銀行のデータセット</a>
+<p>このセクションでは <a href="#creating-wb">先ほど使用したものと同じ、世界銀行のデータセット</a>
 を見ていくことにします。
 これは2レベルの列階層を持ったデータフレームで、
 1レベル目が地域名、2レベル名が国名になっています。</p>
@@ -1695,7 +1695,7 @@ CSVファイルとして保存できます。
 <p>階層的キーはグループ化の結果として生成されることがよくあります。
 たとえばユーロ地区のデータセットに対して10年単位で行をグループ化することができます
 (グループ化の詳細についてはこのドキュメント内にある
- <a href="#grouping">グループ化の節</a> を参照してください)。</p>
+ <a href="#grouping">グループ化のセクション</a> を参照してください)。</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l"> 1: </span>
@@ -1896,7 +1896,7 @@ CSVファイルとして保存できます。
 また <code>Series.mapValues</code> のように、射影やフィルタリングを行う際にも無視されます。
 値無しを処理したい場合には <code>Series.mapAll</code> を使用します。
 この場合には値が <code>option&lt;T&gt;</code> として取得できます
-(ここでは <a href="#creating-csv">先の節</a> で使用したサンプルデータセットを使用します)：</p>
+(ここでは <a href="#creating-csv">先のセクション</a> で使用したサンプルデータセットを使用します)：</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l">1: </span>
